refactor: remove redundant Vercel deployment steps from Playwright workflow

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,21 +21,6 @@ jobs:
       - name: Run Playwright tests
         run: |
           pnpm exec playwright test | tee output.log
-      - name: Install dependencies
-        run: npm install
-
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
-
-      - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Build Project
-        run: npm run build
-
-      - name: Deploy to Vercel
-        id: deploy
-        run: echo "url=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }})" >> $GITHUB_OUTPUT
 
       - name: Check for snapshot issues and post comment
         uses: actions/github-script@v7
@@ -52,7 +37,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `Preview URL for branch **${{ github.head_ref }}**: ${{ steps.deploy.outputs.url }} \n\n![Screenshot](${imageUrl})`
+              body: `Preview URL for branch **${{ github.head_ref }} \n\n![Screenshot](${imageUrl})`
             })
 
             if (hasSnapshotError) {
