--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -54,7 +54,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `Preview Image /n [Image](${comment})`
+              body: `Preview Image /n ![Image](public/fullpage.png)`
             })
 
             if (hasSnapshotError) {
