--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,20 +12,29 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: |
-          npm ci
-          npx playwright install --with-deps
+      - name: Setup Node.js and pnpm
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "pnpm"
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
+      - name: Install dependencies with pnpm
+        run: pnpm install
+
+      - name: Install Playwright browsers
+        run: pnpm exec playwright install --with-deps
 
       - name: Run Playwright tests
-        run: npx playwright test
+        run: pnpm exec playwright test
 
       - name: List snapshot images
         id: list_images
         run: |
           mkdir -p snapshots-pr
           find ./playwright-report -type f -name "*.png" -exec cp {} snapshots-pr/ \;
-          ls snapshots-pr
           echo "FILES=$(ls snapshots-pr | tr '\n' ',' | sed 's/,$//')" >> $GITHUB_OUTPUT
 
       - name: Commit snapshots to PR branch
