fix: update Playwright workflow to copy snapshot images to the public directory

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -49,16 +49,16 @@ jobs:
       - name: List snapshot images
         id: list_images
         run: |
-          mkdir -p snapshots-pr
-          find ./playwright-report -type f -name "*.png" -exec cp {} snapshots-pr/ \;
-          echo "FILES=$(ls snapshots-pr | tr '\n' ',' | sed 's/,$//')" >> $GITHUB_OUTPUT
+          mkdir -p public
+          find ./playwright-report -type f -name "*.png" -exec cp {} public/ \;
+          echo "FILES=$(ls public | tr '\n' ',' | sed 's/,$//')" >> $GITHUB_OUTPUT
 
       - name: Commit snapshots to PR branch
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           mkdir -p pr-snapshots
-          cp snapshots-pr/* pr-snapshots/
+          cp public/* pr-snapshots/
           git add pr-snapshots
           if git diff --cached --quiet; then
             echo "No new screenshots"
