--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -27,44 +27,29 @@ jobs:
       - name: Install Playwright browsers
         run: pnpm exec playwright install --with-deps
 
-      - name: Install wait-on utility
-        run: npm install -g wait-on
-
-      - name: Start development server
-        run: pnpm exec vite --host 0.0.0.0 & echo $! > dev-server.pid
-        env:
-          CI: true
-
-      - name: Wait for dev server to be ready
-        run: wait-on http-get://localhost:5173 -t 60000
-
       - name: Run Playwright tests
         run: pnpm exec playwright test
-
-      - name: Stop development server
-        if: always()
-        run: kill $(cat dev-server.pid) || true
 
       - name: List snapshot images
         id: list_images
         run: |
-          mkdir -p public
-          find ./public -type f -name "*.png" -exec cp {} public/ \;
-          echo "FILES=$(ls public | tr '\n' ',' | sed 's/,$//')" >> $GITHUB_OUTPUT
+          mkdir -p snapshots-pr
+          find ./playwright-report -type f -name "*.png" -exec cp {} snapshots-pr/ \;
+          echo "FILES=$(ls snapshots-pr | tr '\n' ',' | sed 's/,$//')" >> $GITHUB_OUTPUT
 
-      - name: Commit snapshots to PR branch
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          mkdir -p pr-snapshots
-          cp public/* pr-snapshots/
-          git add pr-snapshots
-          if git diff --cached --quiet; then
-            echo "No new screenshots"
-          else
-            git commit -m "Add PR snapshots"
-            git push origin HEAD:${{ github.head_ref }}
-          fi
+      # - name: Commit snapshots to PR branch
+      #   run: |
+      #     git config user.name "github-actions[bot]"
+      #     git config user.email "github-actions[bot]@users.noreply.github.com"
+      #     mkdir -p pr-snapshots
+      #     cp snapshots-pr/* pr-snapshots/
+      #     git add pr-snapshots
+      #     if git diff --cached --quiet; then
+      #       echo "No new screenshots"
+      #     else
+      #       git commit -m "Add PR snapshots"
+      #       git push origin HEAD:${{ github.head_ref }}
+      #     fi
 
       - name: Comment on PR with screenshots
         uses: actions/github-script@v7
