fix: refactor Playwright workflow to simplify test execution and enhance screenshot handling

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,70 +1,43 @@
-name: Playwright Snapshots to PR
-
+name: Playwright Tests
 on:
   pull_request:
-    types: [opened, synchronize]
-
+    branches: [main]
 jobs:
-  playwright-snapshots:
+  test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js and pnpm
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: "pnpm"
-
-      - name: Install pnpm
-        run: npm install -g pnpm
-
-      - name: Install dependencies with pnpm
-        run: pnpm install
-
+          node-version: lts/*
+      - name: Install dependencies
+        run: npm ci
       - name: Install Playwright browsers
-        run: pnpm exec playwright install --with-deps
-
+        run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run: pnpm exec playwright test
-
-      - name: List snapshot images
-        id: list_images
-        run: |
-          mkdir -p snapshots-pr
-          find ./playwright-report -type f -name "*.png" -exec cp {} snapshots-pr/ \;
-          echo "FILES=$(ls snapshots-pr | tr '\n' ',' | sed 's/,$//')" >> $GITHUB_OUTPUT
-
-      # - name: Commit snapshots to PR branch
-      #   run: |
-      #     git config user.name "github-actions[bot]"
-      #     git config user.email "github-actions[bot]@users.noreply.github.com"
-      #     mkdir -p pr-snapshots
-      #     cp snapshots-pr/* pr-snapshots/
-      #     git add pr-snapshots
-      #     if git diff --cached --quiet; then
-      #       echo "No new screenshots"
-      #     else
-      #       git commit -m "Add PR snapshots"
-      #       git push origin HEAD:${{ github.head_ref }}
-      #     fi
-
-      - name: Comment on PR with screenshots
+        run: npx playwright test
+      - name: Upload screenshots as artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: screenshots
+          path: screenshots/
+          retention-days: 30
+      - name: Upload to Imgur
+        id: imgur
+        uses: devicons/public-upload-to-imgur@v2.2.1
+        with:
+          path: screenshots/screenshot.png
+          client_id: ${{ secrets.IMGUR_CLIENT_ID }}
+      - name: Comment screenshot on PR
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const pr = context.payload.pull_request;
-            const files = "${{ steps.list_images.outputs.FILES }}".split(',');
-            const imageMarkdown = files.map(file =>
-              `![${file}](https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/pr-snapshots/${file})`
-            ).join('\n\n');
-
+            const imageUrl = '${{ steps.imgur.outputs.imgur_urls }}';
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: pr.number,
-              body: `🧪 **Playwright Snapshots:**\n\n${imageMarkdown}`
+              issue_number: context.issue.number,
+              body: `### Playwright Screenshot\n![Screenshot](${imageUrl})`
             });
