--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,48 +1,53 @@
-name: Playwright Tests
+name: PR Screenshot Preview
+
 on:
-  push:
-    branches: [main]
   pull_request:
-    branches: [main]
+    types: [opened, synchronize]
+
 jobs:
-  playwright:
-    timeout-minutes: 60
+  screenshot-comment:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Install dependencies
-        run: npm install -g pnpm && pnpm install
-      - name: Install Playwright Browsers
-        run: pnpm exec playwright install --with-deps
+        run: pnpm install
+
       - name: Run Playwright tests
+        run: pnpm exec playwright test
+
+      - name: Upload screenshot as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: pr-screenshot
+          path: public/fullpage.png
+
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: pr-screenshot
+          path: downloaded-screenshot
+
+      - name: Commit screenshot to PR branch
         run: |
-          pnpm exec playwright test | tee output.log
-      - name: Check for snapshot issues and post comment
-        if: failure() # Only run if tests fail
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          cp downloaded-screenshot/pr-screenshot.png ./pr-screenshot.png
+          git add pr-screenshot.png
+          git commit -m "Add PR screenshot" || echo "No changes"
+          git push
+
+      - name: Comment with image
         uses: actions/github-script@v7
         with:
           script: |
-            const { data: artifacts } = await github.rest.actions.listWorkflowRunArtifacts({
+            const pr = context.payload.pull_request;
+            const imageUrl = `https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/pr-screenshot.png`;
+
+            await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              run_id: process.env.GITHUB_RUN_ID,
+              issue_number: pr.number,
+              body: `🖼️ **Playwright Screenshot Preview:**\n\n![Preview Image](${imageUrl})`
             });
-            const report = artifacts.artifacts.find(a => a.name === 'playwright-report');
-            if (report) {
-              body = `Playwright tests failed. See the [Playwright report](${report.archive_download_url}) for details.`;
-            } else {
-              body = `Playwright tests failed. Playwright report artifact not found.`;
-            }
-      - name: Upload Playwright report
-        uses: actions/upload-artifact@v4
-        if: always() # Upload even if tests fail
-        with:
-          name: playwright-report
-          path: test-results/
-          retention-days: 1
