--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,18 +11,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "pnpm"
+
       - name: Install dependencies
         run: pnpm install
+
+      - name: Install Playwright browsers
+        run: pnpm exec playwright install --with-deps
 
       - name: Run Playwright tests
         run: pnpm exec playwright test
@@ -43,7 +47,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          cp downloaded-screenshot/pr-screenshot.png ./pr-screenshot.png
+          cp downloaded-screenshot/fullpage.png ./pr-screenshot.png
           git add pr-screenshot.png
           git commit -m "Add PR screenshot" || echo "No changes"
           git push
