--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -48,11 +48,17 @@ jobs:
         with:
           script: |
             const pr = context.payload.pull_request;
-            const imageUrl = `https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/fullpage.png`;
+
+            // Different ways to get branch information:
+            const headBranch = pr.head.ref;
+            const baseBranch = pr.base.ref;
+            const headSha = pr.head.sha;     
+
+            const imageUrl = `https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${headBranch}/public/fullpage.png`;
 
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: pr.number,
-              body: `🖼️ **Playwright Screenshot Preview:**\n\n![Preview Image](${imageUrl})`
+              body: `🖼️ **Playwright Screenshot Preview :**\n\n![Preview Image](${imageUrl})`
             });
