--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -35,6 +35,28 @@ jobs:
       - name: Run Playwright tests
         run: pnpm exec playwright test
 
+      - name: List snapshot images
+        id: list_images
+        run: |
+          mkdir -p snapshots-pr
+          find ./playwright-report -type f -name "*.png" -exec cp {} snapshots-pr/ \;
+          ls snapshots-pr
+          echo "FILES=$(ls snapshots-pr | tr '\n' ',' | sed 's/,$//')" >> $GITHUB_OUTPUT
+
+      - name: Commit snapshots to PR branch
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          mkdir -p pr-snapshots
+          cp snapshots-pr/* pr-snapshots/
+          git add pr-snapshots
+          if git diff --cached --quiet; then
+            echo "No new screenshots"
+          else
+            git commit -m "Add PR snapshots"
+            git push origin HEAD:${{ github.head_ref }}
+          fi
+
       - name: Upload screenshot as artifact
         uses: actions/upload-artifact@v4
         with:
@@ -52,17 +74,14 @@ jobs:
         with:
           script: |
             const pr = context.payload.pull_request;
-
-            // Different ways to get branch information:
-            const headBranch = pr.head.ref;
-            const baseBranch = pr.base.ref;
-            const headSha = pr.head.sha;     
-
-            const imageUrl = `https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${headBranch}/public/fullpage.png`;
+            const files = "${{ steps.list_images.outputs.FILES }}".split(',');
+            const imageMarkdown = files.map(file =>
+              `![${file}](https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/pr-snapshots/${file})`
+            ).join('\n\n');
 
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: pr.number,
-              body: `🖼️ **Playwright Screenshot Preview :**\n\n![Preview Image](${imageUrl})`
+              body: `🧪 **Playwright Snapshots:**\n\n${imageMarkdown}`
             });
