--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,12 +5,13 @@ on:
     types: [opened, synchronize]
 
 permissions:
-  contents: read
+  contents: write
   pull-requests: write
 
 jobs:
   screenshot-comment:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -35,53 +36,66 @@ jobs:
       - name: Run Playwright tests
         run: pnpm exec playwright test
 
-      - name: List snapshot images
-        id: list_images
+      - name: Prepare screenshots
+        id: prepare_screenshots
         run: |
-          mkdir -p playwright-report
-          find ./playwright-report -type f -name "*.png" -exec cp {} playwright-report/ \;
-          ls playwright-report
-          echo "FILES=$(ls playwright-report | tr '\n' ',' | sed 's/,$//')" >> $GITHUB_OUTPUT
+          # Create directory for collected screenshots
+          mkdir -p playwright-screenshots
 
-      - name: Commit snapshots to PR branch
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          mkdir -p pr-snapshots
-          cp playwright-report/* pr-snapshots/
-          git add pr-snapshots
-          if git diff --cached --quiet; then
-            echo "No new screenshots"
-          else
-            git commit -m "Add PR snapshots"
-            git push origin HEAD:${{ github.head_ref }}
+          # Collect screenshots from different locations
+          if [ -d "./test-results" ]; then
+            find ./test-results -type f -name "*.png" -exec cp {} playwright-screenshots/ \;
           fi
 
-      - name: Upload screenshot as artifact
+          if [ -d "./playwright-report" ]; then
+            find ./playwright-report -type f -name "*.png" -exec cp {} playwright-screenshots/ \;
+          fi
+
+          if [ -f "./public/fullpage.png" ]; then
+            cp ./public/fullpage.png playwright-screenshots/
+          fi
+
+          # Check if any screenshots were found
+          if [ "$(ls -A playwright-screenshots)" ]; then
+            echo "screenshots_found=true" >> $GITHUB_OUTPUT
+            echo "Found screenshots:"
+            ls -la playwright-screenshots/
+          else
+            echo "screenshots_found=false" >> $GITHUB_OUTPUT
+            echo "No screenshots found"
+          fi
+
+      - name: Upload screenshots as artifact
+        if: steps.prepare_screenshots.outputs.screenshots_found == 'true'
         uses: actions/upload-artifact@v4
         with:
-          name: pr-screenshot
-          path: public/fullpage.png
+          name: playwright-screenshots
+          path: playwright-screenshots/
 
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: pr-screenshot
-          path: downloaded-screenshot
-
-      - name: Comment with image
+      - name: Comment on PR
+        if: steps.prepare_screenshots.outputs.screenshots_found == 'true'
         uses: actions/github-script@v7
         with:
           script: |
             const pr = context.payload.pull_request;
-            const files = "${{ steps.list_images.outputs.FILES }}".split(',');
-            const imageMarkdown = files.map(file =>
-              `![${file}](https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/pr-snapshots/${file})`
-            ).join('\n\n');
+            const runId = context.runId;
+            const artifactUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${runId}`;
 
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: pr.number,
-              body: `🧪 **Playwright Snapshots:**\n\n${imageMarkdown}`
+              body: `🧪 **Playwright Test Screenshots Available**
+
+            Screenshots from the Playwright tests are ready for review!
+
+            📥 **Download Screenshots:** [playwright-screenshots artifact](${artifactUrl})
+
+            To view the screenshots:
+            1. Click the link above to go to the workflow run
+            2. Scroll down to the "Artifacts" section
+            3. Download the "playwright-screenshots" artifact
+            4. Extract the zip file to view the screenshots
+
+            🔍 These screenshots show the visual state of your application during testing.`
             });
