--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -36,66 +36,86 @@ jobs:
       - name: Run Playwright tests
         run: pnpm exec playwright test
 
-      - name: Prepare screenshots
-        id: prepare_screenshots
-        run: |
-          # Create directory for collected screenshots
-          mkdir -p playwright-screenshots
-
-          # Collect screenshots from different locations
-          if [ -d "./test-results" ]; then
-            find ./test-results -type f -name "*.png" -exec cp {} playwright-screenshots/ \;
-          fi
-
-          if [ -d "./playwright-report" ]; then
-            find ./playwright-report -type f -name "*.png" -exec cp {} playwright-screenshots/ \;
-          fi
-
-          if [ -f "./public/fullpage.png" ]; then
-            cp ./public/fullpage.png playwright-screenshots/
-          fi
-
-          # Check if any screenshots were found
-          if [ "$(ls -A playwright-screenshots)" ]; then
-            echo "screenshots_found=true" >> $GITHUB_OUTPUT
-            echo "Found screenshots:"
-            ls -la playwright-screenshots/
-          else
-            echo "screenshots_found=false" >> $GITHUB_OUTPUT
-            echo "No screenshots found"
-          fi
-
-      - name: Upload screenshots as artifact
-        if: steps.prepare_screenshots.outputs.screenshots_found == 'true'
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-screenshots
-          path: playwright-screenshots/
-
-      - name: Comment on PR
-        if: steps.prepare_screenshots.outputs.screenshots_found == 'true'
+      - name: Upload screenshots and comment on PR
         uses: actions/github-script@v7
         with:
           script: |
+            const fs = require('fs');
+            const path = require('path');
+
             const pr = context.payload.pull_request;
-            const runId = context.runId;
-            const artifactUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${runId}`;
+            const screenshotDir = 'public';
 
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: pr.number,
-              body: `🧪 **Playwright Test Screenshots Available**
+            // Function to upload image to GitHub
+            async function uploadImage(imagePath, fileName) {
+              try {
+                const imageBuffer = fs.readFileSync(imagePath);
+                const base64Content = imageBuffer.toString('base64');
+                
+                const response = await github.rest.repos.createOrUpdateFileContents({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  path: `screenshots/${pr.number}/${fileName}`,
+                  message: `Add screenshot from PR #${pr.number}`,
+                  content: base64Content,
+                  branch: context.ref.replace('refs/heads/', '')
+                });
+                
+                return response.data.content.download_url;
+              } catch (error) {
+                console.error(`Error uploading ${fileName}:`, error);
+                return null;
+              }
+            }
 
-            Screenshots from the Playwright tests are ready for review!
+            // Check for screenshots in public directory
+            let screenshotUrls = [];
 
-            📥 **Download Screenshots:** [playwright-screenshots artifact](${artifactUrl})
+            if (fs.existsSync(screenshotDir)) {
+              const files = fs.readdirSync(screenshotDir);
+              const imageFiles = files.filter(file => 
+                file.toLowerCase().match(/\.(png|jpg|jpeg|gif|webp)$/i)
+              );
+              
+              console.log('Found image files:', imageFiles);
+              
+              for (const file of imageFiles) {
+                const filePath = path.join(screenshotDir, file);
+                console.log(`Uploading ${file}...`);
+                const url = await uploadImage(filePath, file);
+                if (url) {
+                  screenshotUrls.push({ name: file, url: url });
+                }
+              }
+            }
 
-            To view the screenshots:
-            1. Click the link above to go to the workflow run
-            2. Scroll down to the "Artifacts" section
-            3. Download the "playwright-screenshots" artifact
-            4. Extract the zip file to view the screenshots
-
-            🔍 These screenshots show the visual state of your application during testing.`
-            });
+            // Create comment with screenshots
+            if (screenshotUrls.length > 0) {
+              let commentBody = `🧪 **Playwright Test Screenshots**\n\n`;
+              commentBody += `Screenshots captured from PR #${pr.number}:\n\n`;
+              
+              for (const screenshot of screenshotUrls) {
+                commentBody += `### ${screenshot.name}\n`;
+                commentBody += `![${screenshot.name}](${screenshot.url})\n\n`;
+              }
+              
+              commentBody += `---\n`;
+              commentBody += `🔍 These screenshots show the visual state of your application during testing.\n`;
+              commentBody += `📅 Generated on: ${new Date().toISOString()}\n`;
+              
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: pr.number,
+                body: commentBody
+              });
+            } else {
+              console.log('No screenshots found in public directory');
+              
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: pr.number,
+                body: `🧪 **Playwright Tests Completed**\n\nNo screenshots were generated during this test run.`
+              });
+            }
