--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,55 +1,76 @@
-name: Upload Image to Release and Comment on Pull Request
+name: Comment Playwright Snapshots in PR
 
 on:
   pull_request:
     types: [opened, synchronize]
 
 jobs:
-  upload-and-comment:
+  comment-snapshots:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write # Required for uploading release assets
-      pull-requests: write # Required for commenting on pull requests
+
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Upload Image and Comment
+      - name: Setup Node.js and pnpm
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "pnpm"
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Install Playwright browsers
+        run: pnpm exec playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: pnpm exec playwright test
+
+      - name: List snapshot images from public folder
+        id: list_images
+        run: |
+          if [ -d "public/snapshots" ]; then
+            echo "FILES=$(ls public/snapshots/*.png | xargs -n1 basename | tr '\n' ',' | sed 's/,$//')" >> $GITHUB_OUTPUT
+          else
+            echo "FILES=" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Commit snapshot images to PR branch
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add public/*.png || true
+          if git diff --cached --quiet; then
+            echo "No new screenshots to commit"
+          else
+            git commit -m "Add Playwright snapshots"
+            git push origin HEAD:${{ github.head_ref }}
+          fi
+
+      - name: Comment PR with snapshot images
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const fs = require('fs').promises;
-            const path = require('path');
+            const pr = context.payload.pull_request;
+            const files = "${{ steps.list_images.outputs.FILES }}".split(',').filter(Boolean);
 
-            const imagePath = 'public/fullpage.png'; // Update to your image file path
-            const imageName = path.basename(imagePath);
-
-            try {
-              // Read the image file
-              const imageData = await fs.readFile(imagePath);
-
-              // Upload the image as a release asset
-              const uploadResponse = await github.rest.repos.uploadReleaseAsset({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                release_id: ${{ steps.create-release.outputs.id }},
-                name: imageName,
-                data: imageData,
-                headers: {
-                  'content-type': 'image/png' // Adjust based on image type
-                }
-              });
-
-              // Comment on the pull request with the image link
-              await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.payload.pull_request.number,
-                body: `Uploaded image to release: [${imageName}](${uploadResponse.data.browser_download_url})`
-              });
-
-              console.log(`Successfully uploaded ${imageName} to release and commented on PR #${context.payload.pull_request.number}`);
-            } catch (error) {
-              core.setFailed(`Failed to upload image or comment: ${error.message}`);
+            if (files.length === 0) {
+              console.log("No snapshots found, skipping comment.");
+              return;
             }
+
+            const imageMarkdown = files.map(file =>
+              `![${file}](https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/public/snapshots/${file})`
+            ).join('\n\n');
+
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: pr.number,
+              body: `🧪 **Playwright Snapshot Previews:**\n\n${imageMarkdown}`
+            });
