--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -48,12 +48,14 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout ${{ github.head_ref }}
           git add public/*.png || true
           if git diff --cached --quiet; then
             echo "No new screenshots to commit"
           else
             git commit -m "Add Playwright snapshots"
-            git push origin HEAD:${{ github.head_ref }}
+            git pull --rebase origin ${{ github.head_ref }}
+            git push origin ${{ github.head_ref }}
           fi
 
       - name: Comment PR with snapshot images
