--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -51,7 +51,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add public/*.png || true
-          if git diff --cached --quiet; then
+          if git diff --cached --quiet; then  
             echo "No new screenshots to commit"
           else
             git commit -m "Add Playwright snapshots"
@@ -65,7 +65,6 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const pr = context.payload.pull_request;
-            const files = "${{ steps.list_images.outputs.FILES }}".split(',').filter(Boolean);
 
             if (files.length === 0) {
               console.log("No snapshots found, skipping comment.");
@@ -73,7 +72,7 @@ jobs:
             }
 
             const imageMarkdown = files.map(file =>
-              `![${file}](https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/public/${file})`
+              `![${file}](https://raw.githubusercontent.com/${context.repo.owner}/${context.repo.repo}/${pr.head.ref}/public/fullpage.png)`
             ).join('\n\n');
 
             await github.rest.issues.createComment({
